--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="js/jquery-2.1.3.js"></script>
 		<script src="bootstrap/js/bootstrap.js"></script>
+		<script src="js.js"></script>
 	</head>
 	<body>
 		<header>
@@ -21,7 +22,7 @@
 						<div class="input-group" id="search">
 							<input type="text" class="form-control" placeholder="Search for...">
 							<span class="input-group-btn">
-								<button class="btn btn-default" type="button">Go!</button>
+								<button class="btn btn-default" type="button" id="search">Go!</button>
 							</span>
 						</div><!-- /input-group -->
 					</div>
@@ -41,17 +42,17 @@
 			<div class="container">
 				<div class="row">
 					<div class="clo-xs-12 col-md-12" >
-						<a href="#" class="thumbnail" id="girl">
+						<div class="thumbnail" id="girl">
 							<img src="image/12783006313796.jpg" alt="center" class="img-circle" style = "width:200px;height:300px;">
-						</a>
+						</div>
 					</div>
 					<div class="row">
 						<div class="clo-xs-12 col-md-12" id="text">
 							<p>正是恶魔，拿住操纵我们的线！</p>
 							<p>我们从可憎的物体上发现魅力</p>	
-							<p>我们一步步堕入地狱，每天每日</p>					
+							<p>我们一步步堕入地狱，每天每日</p>	
 							<p>没有恐惧，穿过发出臭气的黑暗</p>
-							<button type="button" class="btn btn-primary btn-lg">加入我们</button>
+							<button type="button" class="btn btn-primary btn-lg" id="joinin">加入我们</button>
 						</div>
 					</div>
 				</div>
