--- a/activities.html
+++ b/activities.html
@@ -62,8 +62,8 @@
                   Just click the seconde button.
                 </div>
                 <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal" id="wiki">GOTO wiki</button>
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-default" id="wiki">GOTO wiki</button>
                 </div>
               </div>
             </div>
@@ -72,18 +72,34 @@
       </div>
     <div>
     <div class="maincontent">
-      <div class="container" id="body">
+      <div class="container">
         <div class="mainbody">
-          <img src="image/12942341297296.jpg" alt="left" class="img-rounded" id="pics">
-          <p>
-          </br></br>Hacker artists create art by hacking on technology as an artistic medium. This has extended the definition of the term and what it means to be a hacker. Such artists may work with graphics, computer hardware, sculpture, music and other audio, animation, video, software, simulations, mathematics, reactive sensory systems, text, poetry, literature, or any combination thereof.
+          <div class="col-md-5">
+            <img src="image/1.jpg" alt="" class="img-rounded" id="pics">
+          </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-6">
+            <p>
+            </br></br>Hacker artists create art by hacking on technology as an artistic medium. This has extended the definition of the term and what it means to be a hacker. Such artists may work with graphics, computer hardware, sculpture, music and other audio, animation, video, software, simulations, mathematics, reactive sensory systems, text, poetry, literature, or any combination thereof.
 
-          </br></br>Dartmouth College musician Larry Polansky states: "Technology and art are inextricably related. Many musicians, video artists, graphic artists, and even poets who work with technology—whether designing it or using it—consider themselves to be part of the 'hacker community.' Computer artists, like non-art hackers, often find themselves on society’s fringes, developing strange, innovative uses of existing technology. There is an empathetic relationship between those, for example, who design experimental music software and hackers who write communications freeware." 
+            </br></br>Dartmouth College musician Larry Polansky states: "Technology and art are inextricably related. Many musicians, video artists, graphic artists, and even poets who work with technology—whether designing it or using it—consider themselves to be part of the 'hacker community.' Computer artists, like non-art hackers, often find themselves on society’s fringes, developing strange, innovative uses of existing technology. There is an empathetic relationship between those, for example, who design experimental music software and hackers who write communications freeware." 
 
-          </br></br>Another description is offered by Jenny Marketou: "Hacker artists operate as culture hackers who manipulate existing techno-semiotic structures towards a different end, to get inside cultural systems on the net and make them do things they were never intended to do." 
+            </br></br>Another description is offered by Jenny Marketou: "Hacker artists operate as culture hackers who manipulate existing techno-semiotic structures towards a different end, to get inside cultural systems on the net and make them do things they were never intended to do." 
 
-          </br></br>A successful software and hardware hacker artist is Mark Lottor (mkl), who has created the 3-D light art projects entitled the Cubatron, and the Big Round Cubatron. This art is made using custom computer technology, with specially designed circuit boards and programming for microprocessor chips to manipulate the LED lights.
-          </p>
+            </br></br>A successful software and hardware hacker artist is Mark Lottor (mkl), who has created the 3-D light art projects entitled the Cubatron, and the Big Round Cubatron. This art is made using custom computer technology, with specially designed circuit boards and programming for microprocessor chips to manipulate the LED lights.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container" id="bodyfoot">
+        <div class="btn-group" role="group" aria-label="...">
+          <button type="button" class="btn btn-default active" id="button1">1</button>
+          <button type="button" class="btn btn-default" id="button2">2</button>
+          <button type="button" class="btn btn-default" id="button3">3</button>
+          <button type="button" class="btn btn-default" id="button4">4</button>
+          <button type="button" class="btn btn-default" id="button5">5</button>
+          <button type="button" class="btn btn-default" id="button6">6</button>
+          <button type="button" class="btn btn-default" id="button7">7</button>
         </div>
       </div>
     </div>
